Extended the C++ backend with Boost-powered helpers for zero inclusion, emptiness detection, subset/proper-subset checks, radius, mag/mig, and distance while handling NA intervals and recycling. Added R-facing wrappers with roxygen docs, aligning units automatically and keeping outputs as units vectors or logicals; regenerated exports and documentation. Expanded test-math.R with diagnostics, radius/mag/mig, and distance coverage, adjusting expectations to reflect vectorised results. Updated the vignette’s summary section to showcase the new helpers in practice. Refreshed the Boost parity checklist to mark the completed/partial items.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,22 +7,35 @@ S3method(c,units_interval)
 S3method(contains,units_interval)
 S3method(convert_units,units_interval)
 S3method(format,units_interval)
+S3method(is_empty,units_interval)
 S3method(length,units_interval)
+S3method(mag,units_interval)
 S3method(midpoint,units_interval)
+S3method(mig,units_interval)
 S3method(print,units_interval)
+S3method(radius,units_interval)
 S3method(rep,units_interval)
 S3method(width,units_interval)
+S3method(zero_in,units_interval)
 export(as_units_interval)
 export(contains)
 export(convert_units)
+export(distance)
 export(interval_intersection)
 export(interval_union)
+export(is_empty)
+export(is_proper_subset)
+export(is_subset)
 export(lower_bounds)
+export(mag)
 export(midpoint)
+export(mig)
 export(overlaps)
+export(radius)
 export(units_interval)
 export(upper_bounds)
 export(width)
+export(zero_in)
 importFrom(Rcpp,sourceCpp)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
