Closed the next parity gaps by adding the missing Boost constructors, diagnostics, and norm helpers, wiring them end-to-end with tests, docs, and vignette updates.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ S3method(contains,units_interval)
 S3method(convert_units,units_interval)
 S3method(format,units_interval)
 S3method(is_empty,units_interval)
+S3method(is_proper_superset,units_interval)
+S3method(is_superset,units_interval)
+S3method(is_whole,units_interval)
 S3method(length,units_interval)
 S3method(mag,units_interval)
 S3method(midpoint,units_interval)
@@ -21,19 +24,25 @@ export(as_units_interval)
 export(contains)
 export(convert_units)
 export(distance)
+export(empty_interval)
 export(interval_intersection)
 export(interval_union)
 export(is_empty)
 export(is_proper_subset)
+export(is_proper_superset)
 export(is_subset)
+export(is_superset)
+export(is_whole)
 export(lower_bounds)
 export(mag)
 export(midpoint)
 export(mig)
+export(norm)
 export(overlaps)
 export(radius)
 export(units_interval)
 export(upper_bounds)
+export(whole_interval)
 export(width)
 export(zero_in)
 importFrom(Rcpp,sourceCpp)
