--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(is_superset,units_interval)
 S3method(is_whole,units_interval)
 S3method(length,units_interval)
 S3method(mag,units_interval)
+S3method(median,units_interval)
 S3method(midpoint,units_interval)
 S3method(mig,units_interval)
 S3method(print,units_interval)
@@ -21,10 +22,12 @@ S3method(rep,units_interval)
 S3method(width,units_interval)
 S3method(zero_in,units_interval)
 export(as_units_interval)
+export(bisect)
 export(contains)
 export(convert_units)
 export(distance)
 export(empty_interval)
+export(inflate)
 export(interval_intersection)
 export(interval_union)
 export(is_empty)
@@ -46,6 +49,7 @@ export(whole_interval)
 export(width)
 export(zero_in)
 importFrom(Rcpp,sourceCpp)
+importFrom(stats,median)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
