Introduced policy helpers in interval_arithmetic.cpp (allow_violation, is_strict_mode) and routed all domain-sensitive operations (division, logs, roots, inverse trig, power helpers, etc.) through them. Non-strict modes now return NA intervals after optionally warning, while strict mode still halts. Updated make_interval to reorder bounds or propagate quiet NaNs under relaxed policies, ensuring the checking mode flag is actually honored throughout numeric workflows. Documented the warning/permissive semantics in the policy-controls roxygen block and regenerated policy-controls.Rd. Added a regression test in test-rounding.R that exercises the divide-by-zero case across strict, warning, and permissive modes, verifying both the emitted conditions and the resulting interval payloads. Regenerated exports/docs where necessary (files left modified: RcppExports.*, NAMESPACE, policy-controls.Rd).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,11 +24,14 @@ S3method(width,units_interval)
 S3method(zero_in,units_interval)
 export(as_units_interval)
 export(bisect)
+export(checking_modes)
 export(contains)
 export(convert_units)
 export(distance)
 export(empty_interval)
 export(exp2)
+export(get_checking_mode)
+export(get_rounding_mode)
 export(hull)
 export(hypot)
 export(inflate)
@@ -42,8 +45,10 @@ export(is_superset)
 export(is_whole)
 export(lower_bounds)
 export(mag)
+export(median_rounding)
 export(midpoint)
 export(mig)
+export(next_interval)
 export(norm)
 export(nth_root)
 export(overlaps)
@@ -51,13 +56,23 @@ export(pow1p)
 export(pow2)
 export(pow_interval)
 export(pow_scalar_interval)
+export(predecessor)
+export(prior_interval)
 export(radius)
 export(root)
+export(round_inward)
+export(round_outward)
+export(rounding_modes)
+export(set_checking_mode)
+export(set_rounding_mode)
 export(sqrt1pm1)
+export(successor)
 export(units_interval)
 export(upper_bounds)
 export(whole_interval)
 export(width)
+export(with_checking_mode)
+export(with_rounding_mode)
 export(zero_in)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,median)
