--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,13 @@ S3method(rep,units_interval)
 S3method(width,units_interval)
 S3method(zero_in,units_interval)
 export(as_units_interval)
+export(as_numeric_bounds)
 export(bisect)
 export(checking_modes)
 export(contains)
 export(convert_units)
+export(certain)
+export(contract)
 export(distance)
 export(empty_interval)
 export(exp2)
@@ -48,6 +51,7 @@ export(mag)
 export(median_rounding)
 export(midpoint)
 export(mig)
+export(possible)
 export(next_interval)
 export(norm)
 export(nth_root)
@@ -73,6 +77,7 @@ export(whole_interval)
 export(width)
 export(with_checking_mode)
 export(with_rounding_mode)
+export(verify)
 export(zero_in)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,median)
