Added production-ready next_value() and prior_value() helpers in rounding.R, reusing the Boost-backed lattice primitives with full unit handling and interval safeguards. Expanded test-rounding.R to validate the new helpers for numeric inputs, unit-preserving behaviour, multi-step advances, and error paths for interval inputs. Regenerated NAMESPACE and rounding-helpers.Rd so the new functions are exported and documented alongside the existing rounding control

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,14 +22,14 @@ S3method(radius,units_interval)
 S3method(rep,units_interval)
 S3method(width,units_interval)
 S3method(zero_in,units_interval)
-export(as_units_interval)
 export(as_numeric_bounds)
+export(as_units_interval)
 export(bisect)
+export(certain)
 export(checking_modes)
 export(contains)
-export(convert_units)
-export(certain)
 export(contract)
+export(convert_units)
 export(distance)
 export(empty_interval)
 export(exp2)
@@ -51,17 +51,19 @@ export(mag)
 export(median_rounding)
 export(midpoint)
 export(mig)
-export(possible)
 export(next_interval)
+export(next_value)
 export(norm)
 export(nth_root)
 export(overlaps)
+export(possible)
 export(pow1p)
 export(pow2)
 export(pow_interval)
 export(pow_scalar_interval)
 export(predecessor)
 export(prior_interval)
+export(prior_value)
 export(radius)
 export(root)
 export(round_inward)
@@ -73,11 +75,11 @@ export(sqrt1pm1)
 export(successor)
 export(units_interval)
 export(upper_bounds)
+export(verify)
 export(whole_interval)
 export(width)
 export(with_checking_mode)
 export(with_rounding_mode)
-export(verify)
 export(zero_in)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,median)
