--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Imports: units, Rcpp, stats
 Suggests: testthat (>= 3.0.0), roxygen2, knitr, rmarkdown, pkgload
 LinkingTo: Rcpp, BH
 VignetteBuilder: knitr
-License: MIT + file LICENSE
+License: MIT
 Encoding: UTF-8
 LazyData: false
 RoxygenNote: 7.3.3
